buildscript {
    ext {
        springBootVersion = '1.5.13.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
    }
}

plugins {
    id 'com.gradle.build-scan' version '1.11'
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'jacoco'

jar {
    baseName = 'events'
    version = project.hasProperty('buildNumber') ? buildNumber : 'SNAPSHOT'
    archiveName = "${baseName}.${extension}"
    manifest {
        attributes(
                "Implementation-Title": "Events",
                "Implementation-Version": version
        )
    }
}

springBoot {
    executable = true
}

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    maven {
        url 'https://dl.bintray.com/wisvch/maven'
    }
}

configurations {
    // We're using HikariCP instead
    compile.exclude module: "tomcat-jdbc"

    // We're using Log4j2 instead
    compile.exclude module: "spring-boot-starter-logging"
}

dependencies {
    compile 'org.springframework.boot:spring-boot-devtools'
    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
    compile 'org.springframework.boot:spring-boot-starter-log4j2'
    compile 'org.springframework.boot:spring-boot-starter-security'
    compile 'org.springframework.boot:spring-boot-starter-tomcat'
    compile 'org.springframework.boot:spring-boot-starter-web'
    compile 'org.springframework.boot:spring-boot-starter-mail'
    compile 'org.springframework.boot:spring-boot-configuration-processor'
    compile 'org.springframework.boot:spring-boot-starter-actuator'

    compile 'javax.el:javax.el-api:2.2.5'

    compile 'org.thymeleaf:thymeleaf-spring4:3.0.0.RELEASE'
    compile 'org.thymeleaf:thymeleaf:3.0.0.RELEASE'
    compile 'org.thymeleaf.extras:thymeleaf-extras-springsecurity4:3.0.0.RELEASE'
    compile 'org.thymeleaf.extras:thymeleaf-extras-java8time:2.1.0.RELEASE'

    compile 'com.zaxxer:HikariCP'
    compile 'com.google.guava:guava'
    compile 'org.hibernate:hibernate-validator'
    compile 'org.apache.commons:commons-lang3:3.5'

    compile 'ch.wisv:wisvch-connect-client:1.3.1.7'

    compile 'org.webjars:bootstrap:4.0.0-beta'
    compile 'org.webjars.bower:eonasdan-bootstrap-datetimepicker:4.17.37'
    compile 'org.webjars.bower:momentjs:2.10.6'
    compile 'org.webjars.bower:wisvch-bootstrap-theme:4.0.0'
    compile 'org.webjars.bower:quagga:0.11.6'
    compile 'org.webjars:sprintf.js:1.0.0'
    compile 'org.webjars:font-awesome:5.0.6'
    compile 'org.webjars.npm:flatpickr:3.0.6'

    compile 'org.flywaydb:flyway-core:4.2.0'
    compile 'org.projectlombok:lombok:1.16.10'

    compile "com.googlecode.json-simple:json-simple:1.1.1"
    compile 'net.sf.biweekly:biweekly:0.6.0'

    runtime 'org.hsqldb:hsqldb'
    runtime 'org.postgresql:postgresql'

    compile 'org.fluttercode.datafactory:datafactory:0.8'
    testCompile 'org.springframework.boot:spring-boot-starter-test'
    testCompile 'com.tngtech.java:junit-dataprovider:1.5.0'
}

buildScan {
    licenseAgreementUrl = 'https://gradle.com/terms-of-service'
    licenseAgree = 'yes'
}

jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled false
    }
}

task jacocoFix(type: Copy) {
    from 'build/reports/jacoco/test/jacocoTestReport.xml'
    into './src/main/java/'
    rename { String fileName ->
        fileName.replace("jacocoTestReport.xml", "jacoco.xml")
    }
}

check.dependsOn jacocoTestReport